--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ollama-compass-cli",
   "version": "1.0.0",
-  "description": "Local hardware detection and Ollama monitoring CLI for Ollama Model Compass",
+  "description": "Local hardware detection and Ollama monitoring CLI for Ollama Model Compass - Get accurate system specs and real-time monitoring",
   "main": "src/index.js",
   "bin": {
     "ollama-compass": "src/cli.js"
@@ -9,16 +9,36 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublishOnly": "echo \"Ready to publish ollama-compass-cli\""
   },
   "keywords": [
     "ollama",
     "hardware",
     "detection",
     "cli",
-    "monitoring"
+    "monitoring",
+    "system-info",
+    "performance",
+    "gpu",
+    "cpu",
+    "memory",
+    "ai",
+    "llm",
+    "machine-learning"
   ],
-  "author": "Ollama Model Compass",
+  "author": {
+    "name": "Ollama Model Compass",
+    "url": "https://ollamalyzer.com"
+  },
+  "homepage": "https://ollamalyzer.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ollamalyzer/ollama-compass-cli.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ollamalyzer/ollama-compass-cli/issues"
+  },
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
